--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <input type="file" id="fileInput" accept="application/pdf" />
+<div id="toolbar"></div>
 <canvas id="pdfCanvas"></canvas>
 <script type="module" src="/src/main.js"></script>
  
