--- a/index.html
+++ b/index.html
@@ -1,5 +1,22 @@
-<input type="file" id="fileInput" accept="application/pdf" />
-<div id="toolbar"></div>
-<canvas id="pdfCanvas"></canvas>
-<script type="module" src="/src/main.js"></script>
- 
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>PDF Editor MVP</title>
+  </head>
+  <body>
+    <h1>PDF Viewer</h1>
+
+    <!-- File input lives in HTML so users can select a PDF -->
+    <input type="file" id="fileInput" accept="application/pdf" />
+
+    <!-- Toolbar is built by JS into this div -->
+    <div id="toolbar"></div>
+
+    <!-- Canvas is where pages are rendered -->
+    <canvas id="pdfCanvas"></canvas>
+
+    <script type="module" src="/src/main.js"></script>
+  </body>
+</html>
