highligt and comment

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 
     <!-- Toolbar is built by JS into this div -->
     <div id="toolbar"></div>
+    
+    <div id="viewer">
+        <!-- Annotation overlay sits above the canvas -->
+        <div id="annoLayer" style="position:relative;"></div>
+    </div>
 
     <!-- Canvas is where pages are rendered -->
     <canvas id="pdfCanvas"></canvas>
