--- a/index.html
+++ b/index.html
@@ -4,26 +4,22 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>PDF Editor MVP</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
     <h1>PDF Viewer</h1>
 
-    <!-- File input with accessibility label -->
     <label for="fileInput">Select PDF file:</label>
     <input type="file" id="fileInput" accept="application/pdf" />
 
-    <!-- Toolbar is built by JS into this div -->
     <div id="toolbar"></div>
     <div class="viewer-scroll">
-        <!-- PDF viewer container with proper positioning -->
-        <div id="viewer" style="position: relative; display: inline-block;">
-            <!-- Canvas is where pages are rendered -->
-            <canvas id="pdfCanvas"></canvas>
-            <!-- Annotation overlay sits above the canvas -->
-            <div id="annoLayer" style="position: absolute; top: 0; left: 0; pointer-events: none;"></div>
-        </div>
+      <div id="viewer">
+        <canvas id="pdfCanvas"></canvas>
+        <div id="annoLayer"></div>
+      </div>
     </div>
-    
+
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
