fix image upload

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <label for="fileInput">Select PDF file:</label>
     <input type="file" id="fileInput" accept="application/pdf" />
+    <input type="file" id="imagePicker" accept="image/*" hidden>
 
     <div id="toolbar"></div>
     <div class="viewer-scroll">
