--- a/index.html
+++ b/index.html
@@ -6,20 +6,35 @@
     <title>PDF Editor MVP</title>
   </head>
   <body>
-    <h1>PDF Viewer</h1>
+    <main>
+      <h1>PDF Viewer</h1>
 
-    <label for="fileInput">Select PDF file:</label>
-    <input type="file" id="fileInput" accept="application/pdf" />
-    <input type="file" id="imagePicker" accept="image/*" hidden>
-
-    <div id="toolbar"></div>
-    <div class="viewer-scroll">
-      <div id="viewer">
-        <canvas id="pdfCanvas"></canvas>
-        <div id="annoLayer"></div>
+      <div>
+        <label for="fileInput">Select PDF file:</label>
+        <input type="file" id="fileInput" accept="application/pdf" />
       </div>
-    </div>
 
-    <script type="module" src="/src/main.js"></script>
+      <div>
+        <label id="imagePickerLabel" for="imagePickerInput">Add image…</label>
+        <input
+          type="file"
+          id="imagePickerInput"
+          accept="image/*"
+          hidden
+          aria-labelledby="imagePickerLabel"
+        />
+      </div>
+
+      <div id="toolbar" aria-label="Annotation toolbar"></div>
+
+      <div class="viewer-scroll">
+        <div id="viewer">
+          <canvas id="pdfCanvas" role="img" aria-label="PDF page canvas"></canvas>
+          <div id="annoLayer" aria-hidden="true"></div>
+        </div>
+      </div>
+
+      <script type="module" src="/src/main.js"></script>
+    </main>
   </body>
 </html>
