--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         />
       </div>
 
-      <div id="toolbar" aria-label="Annotation toolbar"></div>
+      <div id="toolbar" role="toolbar" aria-label="Annotation toolbar"></div>
 
       <div class="viewer-scroll">
         <div id="viewer">
@@ -33,6 +33,8 @@
           <div id="annoLayer" aria-hidden="true"></div>
         </div>
       </div>
+
+      <noscript>This app requires JavaScript enabled.</noscript>
 
       <script type="module" src="/src/main.js"></script>
     </main>
