--- a/index.html
+++ b/index.html
@@ -31,12 +31,7 @@
           </span>
           <span class="viewer-download-btn__label">Download</span>
         </button>
-      </div>
 
-      <!-- File picker -->
-      <div class="file-input-row">
-        <label for="fileInput">Select PDF file:</label>
-        <input type="file" id="fileInput" accept="application/pdf" />
       </div>
 
       <!-- Toolbar: start hidden but space-reserved to avoid CLS -->
@@ -50,7 +45,19 @@
       <!-- Viewer area -->
       <div class="viewer-scroll">
         <div class="viewer-stage">
+          <div class="file-input-panel">
+            <input type="file" id="fileInput" accept="application/pdf" hidden />
+            <label class="file-input-button" for="fileInput">
+              <span class="file-input-button__icon" aria-hidden="true">&#128194;</span>
+              <span>Select PDF</span>
+            </label>
+            <p class="file-input-hint">or drag & drop a PDF onto the page below</p>
+          </div>
           <div id="viewer" class="placeholder">
+            <div class="drop-overlay" aria-hidden="true">
+              <div class="drop-overlay__icon">&#10515;</div>
+              <div class="drop-overlay__text">Drag & drop a PDF here</div>
+            </div>
             <canvas id="pdfCanvas" role="img" aria-label="PDF page canvas"></canvas>
             <div id="annoLayer"></div>
           </div>
