Fix file input label activation

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="viewer-scroll">
         <div class="viewer-stage">
           <div class="file-input-panel">
-            <input type="file" id="fileInput" accept="application/pdf" hidden />
+            <input type="file" id="fileInput" accept="application/pdf" />
             <label class="file-input-button" for="fileInput">
               <span class="file-input-button__icon" aria-hidden="true">&#128194;</span>
               <span>Select PDF</span>
