--- a/index.html
+++ b/index.html
@@ -46,12 +46,23 @@
       <div class="viewer-scroll">
         <div class="viewer-stage">
           <div class="file-input-panel">
-            <input type="file" id="fileInput" accept="application/pdf" hidden />
-            <label class="file-input-button" for="fileInput">
+            <input
+              type="file"
+              id="fileInput"
+              class="file-input-native"
+              accept="application/pdf"
+              aria-describedby="fileInputHint"
+            />
+            <label
+              for="fileInput"
+              class="file-input-button"
+              role="button"
+              tabindex="0"
+            >
               <span class="file-input-button__icon" aria-hidden="true">&#128194;</span>
               <span>Select PDF</span>
             </label>
-            <p class="file-input-hint">or drag & drop a PDF onto the page below</p>
+            <p id="fileInputHint" class="file-input-hint">or drag & drop a PDF onto the page below</p>
           </div>
           <div id="viewer" class="placeholder">
             <div class="drop-overlay" aria-hidden="true">
