Adjust footer padding to span full width

--- a/index.html
+++ b/index.html
@@ -69,6 +69,39 @@
       <noscript>This app requires JavaScript enabled.</noscript>
     </main>
 
+    <footer class="site-footer" aria-label="Site footer">
+      <div class="site-footer__inner">
+        <section class="site-footer__section" aria-labelledby="footer-contact">
+          <h2 id="footer-contact" class="site-footer__title">Contact</h2>
+          <ul class="site-footer__list">
+            <li>
+              <a href="mailto:hello@example.com">hello@example.com</a>
+            </li>
+            <li>
+              <a href="tel:+12345678900">+1 (234) 567-8900</a>
+            </li>
+          </ul>
+        </section>
+
+        <section class="site-footer__section" aria-labelledby="footer-location">
+          <h2 id="footer-location" class="site-footer__title">Studio</h2>
+          <p class="site-footer__text">123 Creative Avenue<br />Suite 45<br />Portland, OR</p>
+          <p class="site-footer__text">Open Monday–Friday · 9am – 5pm</p>
+        </section>
+
+        <section class="site-footer__section" aria-labelledby="footer-links">
+          <h2 id="footer-links" class="site-footer__title">Stay connected</h2>
+          <ul class="site-footer__list">
+            <li><a href="#">LinkedIn</a></li>
+            <li><a href="#">Dribbble</a></li>
+            <li><a href="#">Behance</a></li>
+          </ul>
+        </section>
+      </div>
+
+      <p class="site-footer__note">© 2024 Example Studio. All rights reserved.</p>
+    </footer>
+
     <!-- Vite entry -->
     <script type="module" src="/src/main.js"></script>
   </body>
