Hide native file input

--- a/index.html
+++ b/index.html
@@ -93,12 +93,11 @@
         <div class="viewer-scroll">
           <div class="viewer-stage">
             <div class="file-input-panel">
-              <input type="file" id="fileInput" accept="application/pdf" />
+              <input class="file-input-native" type="file" id="fileInput" accept="application/pdf" />
               <label class="file-input-button" for="fileInput">
                 <span class="file-input-button__icon" aria-hidden="true">&#128194;</span>
                 <span>Select PDF</span>
               </label>
-              <p class="file-input-hint">or drag & drop a PDF onto the page below</p>
             </div>
             <div id="viewer" class="placeholder">
               <div class="drop-overlay" aria-hidden="true">
