Fix footer and thumbnail pane positioning

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     <div class="drop-overlay__text">Click to select or drag & drop a PDF</div>
                   </div>
                   <canvas id="pdfCanvas" role="img" aria-label="PDF page canvas"></canvas>
+                  <div id="textLayer" class="pdf-text-layer" aria-hidden="true"></div>
                   <div id="annoLayer"></div>
                 </div>
               </div>
