Move search panel into sidebar

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                     Hide
                   </button>
                 </div>
+                <div id="sidebarSearch" class="sidebar-search-shell" aria-live="polite"></div>
                 <div id="thumbnailList" class="thumbnail-list" role="list"></div>
               </aside>
               <button
@@ -179,4 +180,3 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
-
